Adjust textarea width and fix scrollbar issue

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -2,12 +2,13 @@
   /* Colors */
   --page-background: #0a0a0a;
   --card-background-light: #535353;
-  --primary-color: #c1c91f;
+  --primary-color: #caccae;
   --secondary-color: #54c06d;
   --tertiary-color: #8371fd;
   --text-color: #e0e0e0;
   --text-color-dark: #0a0a0a;
   --card-border-color: #e0e0e0;
+  --card-background: #171717;
   /* Fonts */
   --font-family: 'Roboto', sans-serif;
   /* Sizes */
